# Ca_repo

./: .gitignore  README.md  import_json_to_db.py  pyproject.toml  run_app.py  seed_database.py  settings.json  test_timers.py
alembic/: env.py
alembic/versions/: 2df9307d86aa_añadir_tablas_casector_y_caorganismo_y_.py  3bc3e2447bde_creación_inicial_de_todas_las_tablas.py  8ce4f5dd5336_agrega_fecha_cierre_segundo_llamado.py  9733f9599c89_reemplaza_caorganismoprioritario_por_.py  a9c870c2fa74_agregar_columnas_faltantes_como_monto_.py  fab8786612ca_añadir_tablas_cakeyword_y_.py
config/: config.py  score_config.py
src/db/: __init__.py  db_models.py  db_service.py  session.py
src/gui/: __init__.py  gui_main.py  gui_scraping_dialog.py  gui_settings_dialog.py  gui_worker.py
src/gui/mixins/: context_menu_mixin.py  data_loader_mixin.py  main_slots_mixin.py  table_manager_mixin.py  threading_mixin.py
src/logic/: etl_service.py  excel_service.py  score_engine.py
src/scraper/: api_handler.py  scraper_service.py  url_builder.py
src/utils/: exceptions.py  logger.py  settings_manager.py
